@@ -319,6 +319,7 @@ extern PyTypeObject WinTableType;
 extern PyTypeObject ParaTableType;
 extern PyTypeObject LinTableType;
 extern PyTypeObject LogTableType;
+extern PyTypeObject CosLogTableType;
 extern PyTypeObject CosTableType;
 extern PyTypeObject CurveTableType;
 extern PyTypeObject ExpTableType;
